[gd_scene load_steps=2 format=3]
[ext_resource path="res://scripts/debug/dev_harness.gd" type="Script" id=1]

[node name="DevHarness" type="Control"]
script = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="."]
rect_min_size = Vector2(400, 240)

[node name="OxygenLabel" type="Label" parent="VBox"]
text = "Oxygen: N/A"

[node name="SuitLabel" type="Label" parent="VBox"]
text = "Suit SL Cap: N/A"

[node name="WaterLabel" type="Label" parent="VBox"]
text = "Water: N/A"

[node name="FlagsLabel" type="Label" parent="VBox"]
text = "Flags: N/A"

[node name="RunTestsButton" type="Button" parent="VBox"]
text = "Run Tests"

[node name="SpawnPlayerButton" type="Button" parent="VBox"]
text = "Spawn Player"
